# SpeedGauge

./: CMakeLists.txt  MySpeedGauge.qml  README.md  main.cpp  main.qml  qml.qrc
